# vibenetbackup

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  install.sh  manage.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  secure_permissions.sh  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml
app/: config.py  database.py  main.py  rate_limiter.py  security.py  version.py
app/models/: __init__.py  backup.py  credential.py  destination.py  device.py  group.py  job.py  notification.py
app/modules/: backup_service.py  maintenance.py  notifications.py
app/modules/destinations/: __init__.py  base.py  forgejo.py  git_destination.py  local.py  smb.py
app/modules/engines/: __init__.py  base.py  netmiko_engine.py  oxidized_engine.py  pfsense_engine.py  proxmox_engine.py  scp_engine.py  ssh_auth.py
app/modules/retention/: manager.py
app/modules/scheduler/: manager.py
app/routers/: api.py  backups.py  credentials.py  dashboard.py  destinations.py  devices.py  groups.py  jobs.py  notifications.py
app/schemas/: __init__.py  backup.py  credential.py  destination.py  device.py  job.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  login.html
app/templates/backups/: compare.html  detail.html  history.html  list.html  trigger.html
app/templates/credentials/: form.html  list.html
app/templates/destinations/: form.html  list.html
app/templates/devices/: detail.html  form.html  import_oxidized.html  list.html  test_all.html
app/templates/groups/: form.html  list.html
app/templates/jobs/: form.html  history.html  list.html  (+1 more)
docker/: build-and-push.sh
docker/image/: docker-compose.yml
docs/: API.md  CONFIGURATION.md  DEVICES.md  INSTALL.md
migrations/: env.py
migrations/versions/: 2d45d4681afb_initial_schema.py  a1b2c3d4e5f6_add_groups_and_credential_group.py  b2c3d4e5f6g7_add_git_destination_types.py  c3d4e5f6g7h8_add_proxy_host_port_to_devices.py  d4e5f6g7h8i9_add_proxy_credential_to_devices.py  e5f6g7h8i9j0_relax_device_enum_constraints.py  f6g7h8i9j0k1_credentials_username_nullable.py
tests/: E2E_TEST_PLAN.md  conftest.py  test_api.py  test_db_migrations.py  test_models.py  test_pfsense_engine.py  test_ssh_auth.py
(+6 files in other folders)
