[project]
name = "vibenetbackup"
version = "1.3"
description = "Network device configuration backup manager"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "apscheduler>=3.10",
    "netmiko>=4.3",
    "paramiko",
    "httpx",
    "gitpython",
    "smbprotocol>=1.16",
    "grandfatherson",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-multipart",
    "jinja2",
    "cryptography",
    "python-dotenv",
]

[project.scripts]
vibenetbackup = "app.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*"]
